--- a/NanoProject/app/src/main/res/values/strings.xml
+++ b/NanoProject/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="button_favorate">MARK AS FAVORATE</string>
 
     <string name="movies_api">http://api.themoviedb.org/3/discover/movie?</string>
+    <string name="pop_movie_api">http://api.themoviedb.org/3/discover/movie?sort_by=popularity.desc</string>
     <string name="top_movie_api">http://api.themoviedb.org/3/discover/movie?sort_by=vote_count.desc</string>
 
 </resources>
