--- a/NanoProject/app/src/main/res/values/strings.xml
+++ b/NanoProject/app/src/main/res/values/strings.xml
@@ -22,10 +22,6 @@
 
     <string name="top_movies">Top Movies</string>
     <string name="pop_movies">Pop Movies</string>
-    <string name="button_favorate">MARK AS FAVORATE</string>
-
-    <string name="movies_api">http://api.themoviedb.org/3/discover/movie?</string>
-    <string name="pop_movie_api">http://api.themoviedb.org/3/discover/movie?sort_by=popularity.desc</string>
-    <string name="top_movie_api">http://api.themoviedb.org/3/discover/movie?sort_by=vote_count.desc</string>
+    <string name="favorate"> Favorite Movies</string>
 
 </resources>
